carousel fun for page change and fixed bug for responsive in numVisible and numScroll

--- a/src/app/pages/product-page/product-page.component.scss
+++ b/src/app/pages/product-page/product-page.component.scss
@@ -1,3 +1,9 @@
+.product-page {
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
 .product-page-details {
     // background-color: var(--surface-card);
     // border-radius: var(--border-radius);
@@ -6,12 +12,13 @@
     // font-family: var(--font-family);
     // color: var(--text-color);
     // background-color: red;
-
     // padding: 0 1rem;ç
     background-color: var(--surface-card);
     border-radius: var(--border-radius);
     box-shadow: 0 4px 6px var(--surface-overlay);
-  
+    max-width: 70%;
+    
+    // width: 70%;
 
     &__title {
       font-size: 1.2rem;
